--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "i18next": "^23.2.3",
     "less": "^4.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.1",
     "react-router-dom": "^6.14.0",
     "vite-plugin-svgr": "^3.2.0"
   },
